Fixed an issue of nav links being squished above mobile size

--- a/css/main.css
+++ b/css/main.css
@@ -567,7 +567,7 @@
     }
   
     header nav {
-      width: 20%;
+      width: 30%;
     }
   
     header nav ul {
